[package]
name = "slint-fw"
# When including taichi765/slint-fw repository as git submodule, version is inherited from
# user's workspace, not this repository's workspace.
# Due to that, we need to sync versions between slint-fw and slint-fw-macros manually.
version = "0.1.0"
edition.workspace = true

[dependencies]
slint-fw-macros = { path = "../slint_fw_macros" }

thiserror = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["sync", "rt-multi-thread", "macros"] }
