[package]
name = "slint-fw-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
slint = { git = "https://github.com/taichi765/slint" }
slint-fw = { path = "../slint_fw" }
