[package]
name = "slint-fw-macros"
edition.workspace = true
# When including taichi765/slint-fw repository as git submodule, version is inherited from
# user's workspace, not this repository's workspace.
# Due to that, we need to sync versions between slint-fw and slint-fw-macros manually.
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
slint = { git = "https://github.com/taichi765/slint" }
slint-fw = { path = "../slint_fw" }
