[package]
name = "stern"
# When including taichi765/stern repository as git submodule, version is inherited from
# user's workspace, not this repository's workspace.
# Due to that, we need to sync versions between stern and stern-macros manually.
version = "0.1.0"
edition.workspace = true

[dependencies]
stern-macros = { path = "../stern_macros" }

thiserror = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["sync", "rt-multi-thread", "macros"] }
